# pasture-management-system

./: .editorconfig  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  behave.ini  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: README.md
docs/adr/: 0001-record-architecture-decisions.md  0002-adopt-development-best-practices.md  0003-use-python-with-roundup-issue-tracker.md  0004-adopt-mit-license-and-slsa-level-1.md
docs/architecture/: workspace.dsl  workspace.json
docs/development/: uv-usage.md
docs/explanation/: architecture-overview.md  itil-change-management-principles.md  why-configuration-management.md
docs/howto/: administration-guide.md  assess-change-risk.md  bdd-demo-script.md  debugging-bdd-scenarios.md  deployment-guide.md  documenting-infrastructure-dependencies.md  email-security-hardening.md  installation-guide.md  managing-issue-lifecycle.md  record-bdd-videos.md  run-tests-fast.md  submit-change-request.md  test-four-interfaces.md  use-email-gateway.md  verifying-releases.md
docs/presentations/: bdd-testing-in-practice.md
docs/reference/: bdd-testing-best-practices.md  change-schema.md  change-workflow-states.md  ci-relationship-types.md  cmdb-schema.md  greenmail-testing.md  performance-baseline.md  performance-benchmarks.md  refactoring-recommendations.md  roundup-development-practices.md  roundup-error-handling-web-ui.md  security-considerations.md  status-transitions.md
docs/sprints/: README.md  sprint-1-backlog.md  sprint-1-planning.md  sprint-1-retrospective.md  sprint-2-backlog.md  sprint-2-planning.md  sprint-2-retrospective.md  sprint-3-planning.md  sprint-3-retrospective.md  sprint-4-code-review.md  sprint-4-planning.md  sprint-4-retrospective.md  sprint-5-backlog.md  sprint-5-code-review.md  sprint-5-planning-revised.md  sprint-5-planning.md  sprint-5-progress.md  sprint-5-retrospective.md  sprint-6-backlog.md  sprint-6-day-2-summary.md  sprint-6-day-3-summary.md  sprint-6-day1-summary.md  sprint-6-planning.md  sprint-6-retrospective.md  sprint-7-backlog.md  sprint-7-planning.md  sprint-7-retrospective.md  sprint-8-backlog.md  sprint-8-retrospective.md  sprint-9-backlog.md  sprint-9-plan.md  sprint-9-retrospective.md
docs/tutorials/: building-homelab-cmdb.md  four-interface-bdd-testing.md  getting-started.md  managing-changes-homelab.md  (+1 more)
features/: environment.py
scripts/: reset-test-db.sh  run-tests-parallel.sh  validate-templates.sh
tests/: __init__.py  test_change_mappings.py  test_cleanup.py  test_database_reinit.py  test_status_mapping.py  test_template_helpers.py
tracker/: TEMPLATE-INFO.txt  config.ini  initial_data.py  interfaces.py  schema.py
(+100 files in other folders)
